Finaliza TextFields e Bottom Sheets

--- a/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/AndroidManifest.xml
+++ b/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                 android:value="" />
         </activity>
         <activity android:name="me.dio.materialdesignestudo.ButtonsActivity" />
+        <activity android:name="me.dio.materialdesignestudo.TextFieldsActivity" />
     </application>
 
 </manifest>
