Finaliza curso de Material Design na DIO

--- a/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/AndroidManifest.xml
+++ b/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:theme="@style/Theme.Material3.Light.NoActionBar"/>
         <activity android:name="me.dio.materialdesignestudo.BottomAppbarActivity" />
         <activity android:name="me.dio.materialdesignestudo.SnackbarActivity" />
+        <activity android:name="me.dio.materialdesignestudo.BottomNavigationActivity" />
     </application>
 
 </manifest>
