--- a/main/desafios-de-projeto/EletricCar/app/src/main/AndroidManifest.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +29,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.CalcularAutonomiaActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:name=".ui.CalcularAutonomiaActivity" />
     </application>
 
 </manifest>
